# python-package-exercise-project-3-team-10

./: Pipfile  README.md  __main__.py  pyproject.toml
.github/workflows/: build.yaml
src/converterpackageteam10/: __main__.py  age_converter.py  distance_converter.py  number_converter.py  time_zone_converter.py
src/metricconverterteam10/: __main__.py  age_converter.py  distance_converter.py  time_zone_converter.py
testfile/: testfile.py
tests/: n.py  test_age_calc.py  test_distance_converter.py  test_number_converter.py  test_time_zone_converter.py
