[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "converterpackageteam10"
description = "An example of a package developed with pyenv, built with build using setuptools, uploaded to PyPI using twine, and distributed via pip."
version = "1.0.0"
authors = [
  { name="Jonason Wu", email="jw5911@nyu.edu" },{ name="Alejandro Olazabal", email="ajo351@nyu.edu" }
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "build", "tutorial"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "pytz",
]
[project.optional-dependencies]
dev = ["pytest","pipenv"]

[project.scripts]
distance_converter = "distance_converter.__main__:main"
time_zone_converter = "time_zone_converter.__main__:main"
number_converter = "number_converter.__main__:main"
age_converter ="age_converter.__main__:main"